syntax = "proto3";

package test;

option go_package = "github.com/pantopic/wazero-grpc/test-server-lite;main";

service TestService {
  rpc Test(TestRequest) returns (TestResponse) {}
}

message TestRequest {
  uint64 foo = 1;
}
message TestResponse {
  uint64 bar = 1;
}
